# Generated by Django 5.2 on 2025-05-22 22:56

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('myapp', '0009_pedido_descricao'),
    ]

    operations = [
        migrations.RemoveField(
            model_name='pedido',
            name='status',
        ),
        migrations.CreateModel(
            name='StatusPedido',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('Pendente', 'Pendente'), ('Pago', 'Pago'), ('Em Transporte', 'Em Transporte'), ('Entregue', 'Entregue')], max_length=50)),
                ('data_status', models.DateTimeField(auto_now_add=True)),
                ('pedido', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='status_pedido', to='myapp.pedido')),
            ],
        ),
    ]
