@startuml DiagramaDeClasses_IlhaDelivery

class Cliente {
}

class Produto {
}

class Carrinho {  
}

class ItemCarrinho {  
}

class Pedido {  
}

class Entregador {
}

class Avaliacao {
}

class Rastreamento { 
}

class Loja{

}


enum CategoriaProduto {
  REFEICAO
  BEBIDA
  SOBREMESA
  OUTROS
}

enum StatusPedido {
  PENDENTE
  PREPARANDO
  EM_TRANSPORTE
  ENTREGUE
  CANCELADO
}

enum FormaPagamento {
  CREDITO
  DEBITO
  PIX
  DINHEIRO
}

Cliente  --  Pedido : faz >
Cliente  --  Avaliacao : escreve >
Carrinho  --  ItemCarrinho : contém >
Pedido  --  Carrinho : inclui >
Pedido -- Notificacao : gera >
Pedido  --  Rastreamento : possui >]
Loja -- Produto : fornece >
Produto  --  Avaliacao : recebe >
Entregador  --  Pedido : entrega >
@enduml